<resources>
    <string name="app_name">Bleach Quiz App</string>
    <string name ="title_text">Bleach Quiz App</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="hint_default_text">Click here to see if there is a hint available for this question!</string>
    <string name="hint_unavailable_text">Sorry, there is no hint available.</string>
    <string name="score_text">Score: 0</string>

    <string name="question_1">The anime Bleach features a main character with bright red hair.</string>

    <string name="question_2">The author of the Bleach manga series is named Tite Kubo.</string>

    <string name="question_3">Ichigo is the only one in his family with the ability to see spirits.</string>
    <string name="question_3_hint">How does Ichigo\'s younger sister, Karin, find out that Ichigo is a Shinigami?</string>

    <string name="question_4">Ichigo witnissed his mother die in a car crash when he was a child.</string>

    <string name="question_5">Toshiro Hitsugaya is the only Bleach character with an ice-type zanpakto.</string>
    <string name="question_5_hint">What kind of zanpakto does Rukia have?</string>

    <string name="question_6">Ichigo is part hollow.</string>
    <string name="question_6_hint">How does Ichigo defeat Ulquiorra at the end of the Arrancar arc?</string>

    <string name="question_7">The primary military division in the Soul Society is split into 13 different
        squads, each with its own commanding captain. </string>
</resources>
